--- a/index.html
+++ b/index.html
@@ -4,30 +4,30 @@
         <link href="./style.css" rel="stylesheet"/>
     </head>
     <body>
-        <main class='grid'>
+        <main id='grid'>
             <div class='grid-item'>
-                <img src="./resources/images/tealights.jpg" width="300" height="400" alt='tealights'/>
+                <img src="./resources/images/tealights.jpg" alt='tealights'/>
             </div>
             <div class='grid-item'>
-                <img src="./resources/images/diwali-banner.png" width="300" height="400" alt="diwali-banner"/>
+                <img src="./resources/images/diwali-banner.png" alt="diwali-banner"/>
             </div>
             <div class='grid-item'>
-                <img src="./resources/images/indian-food.jpg" width="300" height="400" alt="indian-food"/>
+                <img src="./resources/images/indian-food.jpg" alt="indian-food"/>
             </div>
             <div class='grid-item'>
-                <img src="./resources/images/durga-maa.jpg" width="300" height="400" alt="durga-maa"/>
+                <img src="./resources/images/durga-maa.jpg" alt="durga-maa"/>
             </div>
             <div class='grid-item'>
-                <img src="./resources/images/durga-mohisasur.jpg" width="300" height="400" alt='tealights'/>
+                <img src="./resources/images/durga-mohisasur.jpg" alt='tealights'/>
             </div>
             <div class='grid-item'>
-                <img src="./resources/images/astronomy.jpg" width="300" height="400" alt='tealights'/>
+                <img src="./resources/images/astronomy.jpg" alt='tealights'/>
             </div>
             <div class='grid-item'>
-                <img src="./resources/images/astronomy.jpg" width="300" height="400" alt='tealights'/>
+                <img src="./resources/images/astronomy.jpg" alt='tealights'/>
             </div>
             <div class='grid-item'>
-                <img src="./resources/images/astronomy.jpg" width="300" height="400" alt='tealights'/>
+                <img src="./resources/images/astronomy.jpg" alt='tealights'/>
             </div>
         </main>
     </body>
